--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: ideo-documentation-tool
+    name: documentation-tool
     env: node
     buildCommand: npm install && npm run build
     startCommand: npm start
